[package]
name = "derive-votes"
version = "0.1.0"
authors = ["Asparuh Kamenov <asparuh@hack.bg>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
fadroma = { path = "../../core", features = [
    "scrt-addr",
    "scrt-callback",
    "scrt-contract",
    "scrt-migrate",
    "scrt-storage"
] }
scrt-derive-contract = { path = "../../scrt-derive-contract" }
serde = { version="1.0.103", default-features=false, features=["derive"] }
schemars = "0.7"

[dev-dependencies]
kukumba = "0.1.0"
